--- a/demo.html
+++ b/demo.html
@@ -49,7 +49,7 @@
 			explicitConsent: false,
 			position : 'bottom',
 			scriptWrapper: cookieScripts, 
-			cookieScripts: 'Google Analytics, My Stats Ultimate ', 
+			cookieScripts: 'Google Analytics, banana', 
 			backgroundColor: '#52B54A',
 			linkColor: '#ffffff'
 		});
