--- a/demo.html
+++ b/demo.html
@@ -47,9 +47,9 @@
 		$.cookiesDirective({
 			privacyPolicyUri: 'myprivacypolicy.html',
 			explicitConsent: false,
-			position : 'bottom',
+			position : 'top',
 			scriptWrapper: cookieScripts, 
-			cookieScripts: 'Google Analytics, banana', 
+			cookieScripts: 'Google Analytics', 
 			backgroundColor: '#52B54A',
 			linkColor: '#ffffff'
 		});
