--- a/demo.html
+++ b/demo.html
@@ -49,7 +49,7 @@
 			explicitConsent: false,
 			position : 'top',
 			scriptWrapper: cookieScripts, 
-			cookieScripts: 'Google Analytics', 
+			//cookieScripts: 'Google Analytics', 
 			backgroundColor: '#52B54A',
 			linkColor: '#ffffff'
 		});
