--- a/demo.html
+++ b/demo.html
@@ -45,11 +45,10 @@
 		*/
 		
 		$.cookiesDirective({
-			privacyPolicyUri: 'myprivacypolicy.html',
+			privacyPolicyUri: '/p/cookies.html',
 			explicitConsent: false,
 			position : 'top',
 			scriptWrapper: cookieScripts, 
-			//cookieScripts: 'Google Analytics', 
 			backgroundColor: '#52B54A',
 			linkColor: '#ffffff'
 		});
