--- a/demo.html
+++ b/demo.html
@@ -48,6 +48,7 @@
 			privacyPolicyUri: '/p/cookies.html',
 			explicitConsent: false,
 			position : 'top',
+			message: 'Contined nabo will extreme your case for juser.'
 			scriptWrapper: cookieScripts, 
 			backgroundColor: '#52B54A',
 			linkColor: '#ffffff'
