--- a/demo.html
+++ b/demo.html
@@ -48,7 +48,7 @@
 			privacyPolicyUri: '/p/cookies.html',
 			explicitConsent: false,
 			position : 'top',
-			message: 'We use Cookies to help us improve our service. By using the site you agree to our use of Cookies',
+			message: 'We use Cookies to help us improve our service. By using the site you agree to our use of Cookies. ',
 			scriptWrapper: cookieScripts, 
 			backgroundColor: '#52B54A',
 			linkColor: '#ffffff'
