change cookie message background

--- a/demo.html
+++ b/demo.html
@@ -50,7 +50,7 @@
 			position : 'top',
 			message: 'We use Cookies to help us improve our service. By using the site you agree to our use of Cookies. ',
 			scriptWrapper: cookieScripts, 
-			backgroundColor: '#52B54A',
+			backgroundColor: '#000000',
 			linkColor: '#ffffff'
 		});
 	});
